--- a/documentation/content/el/books/handbook/mail/_index.adoc
+++ b/documentation/content/el/books/handbook/mail/_index.adoc
@@ -163,7 +163,9 @@ FreeBSD.org mail is handled (pri=10) by mx1.FreeBSD.org
 [[sendmail]]
 == Ρύθμιση του sendmail
 
-Το man:sendmail[8] είναι ο προεπιλεγμένος Αντιπρόσωπος Μεταφοράς Ταχυδρομείου (Mail Transfer Agent, MTA) στο FreeBSD. Δουλειά του είναι να δέχεται το email από τους Αντιπροσώπους Email Χρήστη (Mail User Agents, MUA) και να το παραδίδει στο κατάλληλο mailer που ορίζεται στο αρχείο ρυθμίσεων του. Το sendmail μπορεί επίσης να δεχθεί συνδέσεις δικτύου και να παραδώσει το mail σε τοπικές θυρίδες ή και σε κάποιο άλλο πρόγραμμα.
+Το man:sendmail[8] ήταν ο προεπιλεγμένος Αντιπρόσωπος Μεταφοράς Ταχυδρομείου (Mail Transfer Agent, MTA) στο FreeBSD. Δουλειά του είναι να δέχεται το email από τους Αντιπροσώπους Email Χρήστη (Mail User Agents, MUA) και να το παραδίδει στο κατάλληλο mailer που ορίζεται στο αρχείο ρυθμίσεων του. Το sendmail μπορεί επίσης να δεχθεί συνδέσεις δικτύου και να παραδώσει το mail σε τοπικές θυρίδες ή και σε κάποιο άλλο πρόγραμμα.
+
+Ξεκινώντας από την έκδοση FreeBSD 14, ο προεπιλεγμένος MTA είναι ο Αντιπρόσωπος Μεταφοράς Ταχυδρομείου DragonFly (man:dma[8]). Άλλοι MTAs συμπεριλαμβανομένων των Exim, Postfix, and qmail, μπορούν να εγκατασταθούν για να αντικαταστίσουν τον προεπιλεγμένο Αντιπρόσωπο.
 
 Το sendmail χρησιμοποιεί τα ακόλουθα αρχεία ρυθμίσεων:
 
