Dragon Fly as default MTA

--- a/documentation/content/el/books/handbook/mail/_index.adoc
+++ b/documentation/content/el/books/handbook/mail/_index.adoc
@@ -3,6 +3,8 @@ title: Κεφάλαιο 28. Ηλεκτρονικό Ταχυδρομείο
 part: Μέρος IV. Δικτυακές Επικοινωνίες
 prev: books/handbook/ppp-and-slip
 next: books/handbook/network-servers
+description: Αυτό το κεφάλαιο αποτελεί μια εισαγωγή στην χρήση ενός εξυπηρετητή email στο FreeBSD, καθώς και μια εισαγωγή στην αποστολή και λήψη ηλεκτρονικού ταχυδρομείου χρησιμοποιώντας το FreeBSD.
+tags: ["mail", "sendmail", "dma", "MTA", "SMTP", "mail user agents", "fetchmail", "procmail", "alpine", "mutt", "postfix"]
 showBookMenu: true
 weight: 33
 params:
@@ -17,7 +19,7 @@ params:
 :icons: font
 :sectnums:
 :sectnumlevels: 6
-:sectnumoffset: 28
+:sectnumoffset: 31
 :partnums:
 :source-highlighter: rouge
 :experimental:
@@ -58,7 +60,7 @@ endif::[]
 * Που βρίσκονται τα βασικά αρχεία ρυθμίσεων του  sendmail στο FreeBSD.
 * Τη διαφορά μεταξύ απομακρυσμένων και τοπικών θυρίδων ταχυδρομείου (mailboxes).
 * Πως να εμποδίσετε ανεπιθύμητους spammers από το να χρησιμοποιήσουν τον δικό σας εξυπηρετητή email ως αναμεταδότη.
-* Πως να εγκαταστήσετε και να ρυθμίσετε ένα εναλλακτικό Αντιπρόσωπο Μεταφοράς Ταχυδρομείου (Mail Transfer Agent) στο σύστημα σας, αντικαθιστώντας έτσι το sendmail.
+* Πως να εγκαταστήσετε και να ρυθμίσετε ένα εναλλακτικό Αντιπρόσωπο Μεταφοράς Ταχυδρομείου (Mail Transfer Agent) στο σύστημα σας, αντικαθιστώντας έτσι το DragonFly Mail Agent ή το sendmail.
 * Πως να αντιμετωπίσετε συνηθισμένα προβλήματα στον διακομιστή ταχυδρομείου.
 * Πως να χρησιμοποιήσετε το SMTP με το UUCP.
 * Πως να ρυθμίσετε το σύστημα σας μόνο για αποστολή email.
@@ -77,7 +79,7 @@ endif::[]
 [[mail-using]]
 == Χρησιμοποιώντας το Ηλεκτρονικό Ταχυδρομείο
 
-Σε κάθε ανταλλαγή ηλεκτρονικού ταχυδρομείου, συνεργάζονται πέντε βασικά τμήματα: Το <<mail-mua,πρόγραμμα χρήστη>>, ο <<mail-mta,δαίμονας του εξυπηρετητή>>, το <<mail-dns,DNS>>, μια <<mail-receive,απομακρυσμένη ή τοπική θυρίδα ταχυδρομείου (mailbox)>> και φυσικά ο <<mail-host,υπολογιστής που διαχειρίζεται το email (mailhost)>>.
+Σε κάθε ανταλλαγή ηλεκτρονικού ταχυδρομείου, συνεργάζονται πέντε βασικά τμήματα: Το <<mail-mua,πρόγραμμα χρήστη>>, ο <<mail-mta,δαίμονας του εξυπηρετητή>>, το <<mail-dns,DNS>>, μια <<mail-receive,απομακρυσμένη ή τοπική θυρίδα ταχυδρομείου (mailbox)>> και φυσικά ο <<mail-host,υπολογιστής που διαχειρίζεται το email (mailhost)>>. Αυτή η ενότητα παρέχει μια επισκόπηση αυτών των τμημάτων.
 
 [[mail-mua]]
 === Το Πρόγραμμα Χρήστη
@@ -281,9 +283,9 @@ postmaster@example.com          postmaster@noc.example.net
 [[mail-changingmta]]
 == Αλλάζοντας τον Αντιπρόσωπο Μεταφοράς Ταχυδρομείου (MTA)
 
-Όπως έχουμε ήδη αναφέρει, το FreeBSD έρχεται με το sendmail προεγκατεστημένο ως Αντιπρόσωπο Μεταφοράς Ταχυδρομείου (Mail Transfer Agent, MTA). Το πρόγραμμα αυτό είναι από προεπιλογή υπεύθυνο για την εισερχόμενη και εξερχόμενη αλληλογραφία.
+Στην έκδοση FreeBSD 14, o man:dma[8] είναι ο προεπιλεγμένος Αντιπρόσωπος Μεταφοράς Ταχυδρομείου (Mail Transfer Agent, MTA) ενώ στις προηγούμενες εκδόσεις είναι ο man:sendmail[8].
 
-Υπάρχει ωστόσο πληθώρα λόγων για τους οποίους κάποιοι διαχειριστές επιλέγουν να αλλάξουν το MTA του συστήματος τους. Οι λόγοι αυτοί κυμαίνονται από το ότι απλά θέλουν να δοκιμάσουν κάποιο άλλο MTA, ως και το ότι χρειάζονται κάποιο ιδιαίτερο χαρακτηριστικό ή δυνατότητα που υπάρχει σε κάποιο άλλο mailer. Ευτυχώς, το FreeBSD κάνει εύκολη την αλλαγή του αντιπροσώπου.
+Υπάρχει ωστόσο πληθώρα λόγων για τους οποίους κάποιοι διαχειριστές επιλέγουν να αλλάξουν το MTA του συστήματος τους. Οι λόγοι αυτοί κυμαίνονται από το ότι απλά θέλουν να δοκιμάσουν κάποιο άλλο MTA, ως και το ότι χρειάζονται κάποιο ιδιαίτερο χαρακτηριστικό ή δυνατότητα που υπάρχει σε κάποιο άλλο mailer. Ευτυχώς, το FreeBSD κάνει εύκολη την αλλαγή του αντιπροσώπου μέσω της πληθώρας ενναλακτικών MTAs διαθέσιμων στην κατηγορία 'mail' της συλλογής Ports.
 
 === Εγκαταστήστε Νέο MTA
 
