--- a/documentation/content/en/books/handbook/jails/_index.adoc
+++ b/documentation/content/en/books/handbook/jails/_index.adoc
@@ -687,7 +687,7 @@ To make this setting persist across reboots, add the following lines to [.filena
 ....
 defaultrouter="192.168.1.1"
 cloned_interfaces="bridge0"
-ifconfig_bridge0="inet 192.168.1.150/24 addm em0 up"
+ifconfig_bridge0="addm em0 up"
 ....
 
 The next step is to create the jail as indicated above.
@@ -703,7 +703,7 @@ The following is an example configuration for a VNET jail:
 ....
 vnet {
   # STARTUP/LOGGING
-  exec.start = "/bin/sh /etc/rc";
+  exec.start = "";
   exec.stop  = "/bin/sh /etc/rc.shutdown";
   exec.consolelog = "/var/log/jail_console_${name}.log";
 
@@ -734,8 +734,11 @@ vnet {
   exec.prestart += "ifconfig ${bridge} addm ${epair}a up";
   exec.start    += "ifconfig ${epair}b ${ip} up";
   exec.start    += "route add default ${gateway}";
-  exec.poststop = "ifconfig ${bridge} deletem ${epair}a";
+  exec.poststop  = "ifconfig ${bridge} deletem ${epair}a";
   exec.poststop += "ifconfig ${epair}a destroy";
+
+  # START rc _AFTER_ NETWORK SETUP
+  exec.start    += "/bin/sh /etc/rc";
 }
 ....
 
