Status/2024Q1/valgrind: typo fixed

--- a/website/content/en/status/report-2024-01-2024-03/valgrind.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/valgrind.adoc
@@ -14,7 +14,7 @@ Valgrind 3.23 is due out at the end of April 2024 and package:devel/valgrind[] w
 
 package:devel/valgrind-devel[] will get an update as soon as I have pushed the changes for arm64.
 
-`--track-fds=yes` now checks for and warns about attempts to close a file decriptor more than once.
+`--track-fds=yes` now checks for and warns about attempts to close a file descriptor more than once.
 Handling of closefrom has been improved to use this feature.
 
 There are some important fixes for FreeBSD 15, in particular handling the new `libsys`.
