The FreeBSD Mail archive moved to mail-archive.freebsd.org

--- a/documentation/content/en/articles/mailing-list-faq/_index.po
+++ b/documentation/content/en/articles/mailing-list-faq/_index.po
@@ -187,7 +187,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:104
 msgid ""
-"Yes. Threaded archives are available link:https://docs.FreeBSD.org/mail/"
+"Yes. Threaded archives are available link:https://mail-archive.freebsd.org/mail/"
 "[here].  You can also access https://lists.freebsd.org/pipermail[mailman "
 "archive] and link:https://lists.freebsd.org/archives[mlmmj archive] directly."
 msgstr ""
