the mail archive contains all e-mails since 1994

--- a/documentation/content/en/articles/mailing-list-faq/_index.adoc
+++ b/documentation/content/en/articles/mailing-list-faq/_index.adoc
@@ -99,7 +99,7 @@ This is a classical mistake when using mailing lists; please try to avoid it.
 
 === Are archives available?
 
-Yes. Threaded archives are available link:https://mail-archive.freebsd.org/mail/[here].
+Yes. Threaded archives with all e-mails since 1994 are available link:https://mail-archive.freebsd.org/mail/[here].
 You can also access https://lists.freebsd.org/pipermail[mailman archive] and link:https://lists.freebsd.org/archives[mlmmj archive] directly.
 
 === Are mailing lists available in a digest format?
