add link to threaded archives

--- a/website/content/en/community/mailinglists.adoc
+++ b/website/content/en/community/mailinglists.adoc
@@ -15,6 +15,8 @@ Mailing lists are the primary communication channel for the FreeBSD community, a
 
 == Archives
 
+The https://mail-archive.freebsd.org/mail/[threaded archives] with all e-mails since 1994 are available at https://mail-archive.freebsd.org/mail/
+
 Browse:
 
 - https://lists.freebsd.org/archives/[]
@@ -24,6 +26,8 @@ Search:
 - https://lists.freebsd.org/search[]
 
 Archives prior to May 2021 are in https://lists.freebsd.org/pipermail/[a separate area].
+
+
 
 == Non-English Lists
 
