Add errata affecting 13.2R, 13.3R, and 14.0R
FreeBSD-EN-24:05.tty affects 13.2R and 14.0R
FreeBSD-EN-24:06.wireguard affects all supported releases
FreeBSD-EN-24:07.clang affects 13.3R and 14.0R
FreeBSD-EN-24:08.Kerberos affects 14.0R

--- a/website/content/en/releases/13.2R/errata.adoc
+++ b/website/content/en/releases/13.2R/errata.adoc
@@ -83,6 +83,8 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:01.tzdata.asc[FreeBSD-EN-24:01.tzdata] |14 February 2024 |Timezone database information update
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:02.libutil.asc[FreeBSD-EN-24:02.libutil] |14 February 2024 |Login class resource limits and CPU mask bypass
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:03.kqueue.asc[FreeBSD-EN-24:03.kqueue] |14 February 2024 |kqueue_close(2) page fault on exit using rfork(2)
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:05.tty.asc[FreeBSD-EN-24:05.tty] |28 March 2024 |TTY Kernel Panic
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:06.wireguard.asc[FreeBSD-EN-24:06.wireguard] |28 March 2024 |Insufficient barriers in WireGuard if_wg(4)
 |===
 
 [[open-issues]]
