--- a/website/content/en/releases/14.0R/errata.adoc
+++ b/website/content/en/releases/14.0R/errata.adoc
@@ -70,6 +70,10 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:02.libutil.asc[FreeBSD-EN-24:02.libutil] |14 February 2024 |Login class resource limits and CPU mask bypass
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:03.kqueue.asc[FreeBSD-EN-24:03.kqueue] |14 February 2024 |kqueue_close(2) page fault on exit using rfork(2)
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:04.ip.asc[FreeBSD-EN-24:04.ip] |14 February 2024 |Kernel panic triggered by bind(2)
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:05.tty.asc[FreeBSD-EN-24:05.tty] |28 March 2024 |TTY Kernel Panic
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:06.wireguard.asc[FreeBSD-EN-24:06.wireguard] |28 March 2024 |Insufficient barriers in WireGuard if_wg(4)
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:07.clang.asc[FreeBSD-EN-24:07.clang] |28 March 2024 |Clang crash when certain optimization is enabled
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:08.kerberos.asc[FreeBSD-EN-24:08.kerberos] |28 March 2024 |Kerberos segfaults when using weak crypto
 |===
 
 [[open-issues]]
