--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -1128,9 +1128,9 @@ package:net/rsync[] is commonly installed, so I'll use that.
 It is critical to verify that the source code you are importing comes from a
 trustworthy source. Many open-source projects use cryptographic signatures to
 sign code changes, git tags, and/or source code tarballs. Always verify these
-signatures, and use isolation mechanisms like jails, chroot, in combination of
+signatures, and use isolation mechanisms like jails, chroot, in combination with
 a dedicated, non-privileged user account that is different from the one you
-regularily use (see the Updating the FreeBSD source tree section below for
+regularly use (see the Updating the FreeBSD source tree section below for
 more details), until you are confident that the source code you are importing
 looks safe. Following the upstream development and occasionally reviewing the
 upstream code changes can greatly help in improving code quality and benefit
@@ -1187,7 +1187,7 @@ If there were conflicts, you would need to fix them before committing.
 Include details about the changes being merged in the merge commit message.
 
 Some open-source software includes a `configure` script that generates files
-used to define how the code is built, usually, these generated files like
+used to define how the code is built; usually, these generated files like
 `config.h` should be updated as part of the import process. When doing
 this, always keep in mind that these scripts are executable code running
 under the current user's credentials. This process should always be run
@@ -1203,7 +1203,7 @@ installed software packages, which may lead to unexpected results.
 When testing your changes, run them in a chroot or jailed environment,
 or even within a virtual machine first, especially for kernel or library
 modifications. This approach helps prevent adverse interactions with
-otheryour working environment. It can be particularly beneficial for
+your working environment. It can be particularly beneficial for
 changes to libraries that many base system components use,
 among others.
 
