Additional contributors: Add Trond Endrestøl
Trond is the author of many commits in the ports and src repositories.

--- a/shared/contrib-additional.adoc
+++ b/shared/contrib-additional.adoc
@@ -2233,6 +2233,7 @@
 * Trevor Cornpropst <mailto:tcornpropst@cox.net[tcornpropst@cox.net]>
 * Trober <mailto:trober@trober.com[trober@trober.com]>
 * Troels Kofoed Jacobsen <mailto:tkjacobsen@gmail.com[tkjacobsen@gmail.com]>
+* Trond Endrestøl <mailto:Trond.Endrestol@ximalas.info[Trond.Endrestol@ximalas.info]>
 * Tsung-Han Yeh <mailto:snowfly@yuntech.edu.tw[snowfly@yuntech.edu.tw]>
 * Tz-Huan Huang <mailto:tzhuan@gmail.com[tzhuan@gmail.com]>
 * Tzanetos Balitsaris <mailto:tzabal@it.teithe.gr[tzabal@it.teithe.gr]>
