Document __FreeBSD_version value 1500018.

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -150,6 +150,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |March 20, 2024
 |15.0-CURRENT after fixing a clang assertion or crash when building recent boost libraries.
 
+|1500018
+|gitref:0192eda105b367d4670205547e8e830e3716bea3[repository="src",length=12]
+|April 6, 2024
+|15.0-CURRENT after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-18.1.3-0-gc13b7485b879, a.k.a. 18.1.3 release.
+
 |===
 
 [[versions-14]]
