Status/2024Q1/freshports.adoc: Fixes
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/363

--- a/website/content/en/status/report-2024-01-2024-03/freshports.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/freshports.adoc
@@ -11,7 +11,7 @@ They cover all commits, not just ports.
 
 FreshPorts tracks the commits and extracts data from the port Makefiles to create a database of information useful to both port maintainers and port users.
 
-For example, link:https://www.freshports.org/security/acme.sh/#packages[] shows the history of the package:security/acme.sh[] port, back to its creation in May 2017.
+For example, link:https://www.freshports.org/security/acme.sh/#history[] shows the history of the package:security/acme.sh[] port, back to its creation in May 2017.
 Also available are dependencies, flavors, configuration options, and available packages.
 All of this is useful for both users and developers of ports.
 
@@ -30,7 +30,7 @@ Details at:
 
 ==== Help Needed
 
-It has been over 22 years since FreshPorts started.
+It has been over 23 years since FreshPorts started.
 Others must take over eventually.
 I have started that process recently.
 There are several aspects to FreshPorts:
