update chapter 5: The X Window System synopsis
made a slight change in the synopsis section which I think might be helpful

--- a/documentation/content/en/books/handbook/x11/_index.adoc
+++ b/documentation/content/en/books/handbook/x11/_index.adoc
@@ -53,7 +53,7 @@ endif::[]
 
 An installation of FreeBSD using bsdinstall does not automatically install a graphical user interface.
 This chapter describes how to install and configure Xorg, which provides the open source X Window System used to provide a graphical environment.
-It then describes how to find and install a desktop environment or window manager.
+It then describes how to customize the configuration and manage graphics drivers.
 
 Before reading this chapter, you should:
 
