--- a/website/content/en/releases/13.3R/schedule.adoc
+++ b/website/content/en/releases/13.3R/schedule.adoc
@@ -36,7 +36,7 @@ link:{handbook}glossary/#mfc-glossary[MFC] requests should be sent to link:mailt
 |RC1 builds begin |23 February 2024 |25 February 2024 |First release candidate.
 |RELEASE builds begin |1 March 2024 |1 March 2024 |{localRel}-RELEASE builds begin.
 |RELEASE announcement |5 March 2024 |5 March 2024 |{localRel}-RELEASE press release.
-|Turn over to the secteam |- |- |{localBranchReleng} branch is handed over to the FreeBSD Security Officer Team in one or two weeks after the announcement.
+|Turn over to the secteam |- |24 March 2024 |{localBranchReleng} branch is handed over to the FreeBSD Security Officer Team in one or two weeks after the announcement.
 |===
 
 "*" indicates "as-needed" items.
