jails handbook: consistent spacing and assignment
Fix some inconsistencies reported on IRC

--- a/documentation/content/en/books/handbook/jails/_index.adoc
+++ b/documentation/content/en/books/handbook/jails/_index.adoc
@@ -729,7 +729,7 @@ vnet {
   $epair = "epair${id}";
 
   # ADD TO bridge INTERFACE
-  exec.prestart += "ifconfig ${epair} create up";
+  exec.prestart  = "ifconfig ${epair} create up";
   exec.prestart += "ifconfig ${epair}a up descr jail:${name}";
   exec.prestart += "ifconfig ${bridge} addm ${epair}a up";
   exec.start    += "ifconfig ${epair}b ${ip} up";
@@ -830,7 +830,7 @@ ubuntu {
   allow.raw_sockets;
   exec.clean;
   mount.devfs;
-  devfs_ruleset=4;
+  devfs_ruleset = 4;
 
   # HOSTNAME/PATH
   host.hostname = "${name}";
