handbook/network-servers: NFS: Point readers to zfs-share(8)
Sponsored by:	Klara, Inc.

--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -404,6 +404,8 @@ To make subsequent [.filename]#/etc/exports# edits take effect immediately, forc
 # service mountd reload
 ....
 
+Refer to man:zfs-share[8] for a description of exporting ZFS datasets via NFS using the `sharenfs` ZFS property instead of the man:exports[5] file.
+
 Refer to man:nfsv4[4] for a description of an NFS Version 4 setup.
 
 === Configuring the Client
