--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -454,7 +454,7 @@ To enable locking, execute the following command on both the client and server:
 # sysrc rpc_lockd_enable="YES"
 ....
 
-Then start the service:
+Then start the man:rpc.lockd[8] service:
 
 [source,shell]
 ....
