--- a/website/content/en/status/report-2024-01-2024-03/cloud-init.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/cloud-init.adoc
@@ -14,20 +14,20 @@ To achieve this goal, we need to make FreeBSD run in LXD (and Incus), which it a
 Here are some improvements from the recent weeks:
 
 - I have written a small https://codeberg.org/meena/test-cloud-init[testing-framework] (in sh, and I'm slowly porting it to OpenTofu/Terraform), which installs the latest version of package:net/cloud-init-devel[] or package:net/cloud-init[] and runs a couple of standard cloud-init tests.
-- To do this, I have created a https://pkg.igalic.co/[dedicated public repository] which contains the latest versions of package:net/cloud-init-devel[] and package:net/cloud-init[] for FreeBSD 13 and 14 on amd64 and aarch64
-- I have https://codeberg.org/meena/vsock-tests[ported Linux' vsock testing framework to FreeBSD]
+- To do this, I have created a https://pkg.igalic.co/[dedicated public repository] which contains the latest versions of package:net/cloud-init-devel[] and package:net/cloud-init[] for FreeBSD 13 and 14 on amd64 and aarch64.
+- I have https://codeberg.org/meena/vsock-tests[ported Linux's vsock testing framework to FreeBSD]
 - I created a driver skeleton for a https://codeberg.org/meena/freebsd-src/src/branch/vsock/sys/dev/virtio/socket[VirtIO Socket driver], based on the HyperV Socket driver.
 - In doing so, I made numerous https://reviews.freebsd.org/D44517[improvements to HyperV sockets], some of which are accepted, others still need more work.
 - I have tested and released the latest 24.1 series cloud-init, where we have finally fixed some longstanding bugs, such as https://github.com/canonical/cloud-init/pull/4820[moving ``/run/cloud-init``] to ``/var/run/cloud-init`` on BSD, as well as fixing the https://github.com/canonical/cloud-init/pull/5061[``homedir`` argument] to ``user_groups`` to actually do something.
 - This release also sees numerous fixes to the OpenBSD code-paths from the community and not just me.
-- I've also started an official port for OpenBSD, but https://marc.info/?l=openbsd-ports&m=170508174230708&w=2[that work has stalled].
+- I have also started an official port for OpenBSD, but https://marc.info/?l=openbsd-ports&m=170508174230708&w=2[that work has stalled].
 
 The work to come, in broad strokes:
 
-- finish the FreeBSD VirtIO Socket driver
-- fix Go's runtime to support VirtIO on FreeBSD
-- port lxd-agent's dependencies to FreeBSD
-- port lxd-agent to FreeBSD
+- Finish the FreeBSD VirtIO Socket driver.
+- Fix Go's runtime to support VirtIO on FreeBSD.
+- Port lxd-agent's dependencies to FreeBSD.
+- Port lxd-agent to FreeBSD.
 
 That work will be interspersed with more improvments to cloud-init on BSDs, and more tests on different cloud providers.
 
