remove usage of royal we in favour of explaining who is who

--- a/website/content/en/status/report-2024-01-2024-03/cloud-init.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/cloud-init.adoc
@@ -8,8 +8,8 @@ Contact: Mina Galić <freebsd@igalic.co>
 
 cloud-init is the standard way of provisioning servers in the cloud.
 Over the past year and a half, thanks to this FreeBSD support has steadily improved.
-This year, we took a pivot and decided to explicitly focus on making improvements in FreeBSD itself, that will aid the cloud-init team to test future changes to FreeBSD code-paths themselves.
-To achieve this goal, we need to make FreeBSD run in LXD (and Incus), which it already can, but not under control of ``lxd-agent`` (or ``incus-agent``).
+This year, together with cloud-init developers and the FreeBSD Foundation, we decided to explicitly focus on making improvements in FreeBSD itself, that will aid the cloud-init team to test future changes to FreeBSD code-paths themselves.
+To achieve this goal, I need to make FreeBSD run in LXD (and Incus), under the control of ``lxd-agent`` (or ``incus-agent``).
 
 Here are some improvements from the recent weeks:
 
@@ -18,7 +18,7 @@ Here are some improvements from the recent weeks:
 - I have https://codeberg.org/meena/vsock-tests[ported Linux's vsock testing framework to FreeBSD]
 - I created a driver skeleton for a https://codeberg.org/meena/freebsd-src/src/branch/vsock/sys/dev/virtio/socket[VirtIO Socket driver], based on the HyperV Socket driver.
 - In doing so, I made numerous https://reviews.freebsd.org/D44517[improvements to HyperV sockets], some of which are accepted, others still need more work.
-- I have tested and released the latest 24.1 series cloud-init, where we have finally fixed some longstanding bugs, such as https://github.com/canonical/cloud-init/pull/4820[moving ``/run/cloud-init``] to ``/var/run/cloud-init`` on BSD, as well as fixing the https://github.com/canonical/cloud-init/pull/5061[``homedir`` argument] to ``user_groups`` to actually do something.
+- I have tested and released the latest 24.1 series cloud-init, where the cloud-init team and I have finally fixed some longstanding bugs, such as https://github.com/canonical/cloud-init/pull/4820[moving ``/run/cloud-init``] to ``/var/run/cloud-init`` on BSD, as well as fixing the https://github.com/canonical/cloud-init/pull/5061[``homedir`` argument] to ``user_groups`` to actually do something.
 - This release also sees numerous fixes to the OpenBSD code-paths from the community and not just me.
 - I have also started an official port for OpenBSD, but https://marc.info/?l=openbsd-ports&m=170508174230708&w=2[that work has stalled].
 
