--- a/website/content/en/status/report-2024-01-2024-03/gcc.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/gcc.adoc
@@ -17,7 +17,7 @@ Some work on existing bugs has already started.
 
 In particular, package:lang/gcc14-devel[] has long stayed out of date due to some issues with building the port without any BOOTSTRAP option.
 Thanks to the help of other developers and contributors (a special thank to Mark Millard), I noticed that according to the official documentation link:https://gcc.gnu.org/install/prerequisites.html[building GCC without bootstrap requires a working GCC binary] and thus I switched package:lang/gcc14-devel[] to require that a BOOTSTRAP option is set.
-However it has later been stated that bootstraping GCC using clang and libc++ is link:https://gcc.gnu.org/bugzilla/show_bug.cgi?id=111632[officially supported].
+However it has later been stated that bootstrapping GCC using clang and libc++ is link:https://gcc.gnu.org/bugzilla/show_bug.cgi?id=111632[officially supported].
 But it has also been stated that this is not a high priority.
 
 At the moment package:lang/gcc14-devel[] is the only GCC port requiring a BOOTSTRAP option to be set.
