--- a/website/content/en/status/report-2024-01-2024-03/ten64-whle-honeycomb.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/ten64-whle-honeycomb.adoc
@@ -16,7 +16,7 @@ For DPAA2 I have local changes which will need review (or further discussion):
 * Improve Dmitry Salychev's (dsl) initial SFF/SFP code, prototyping a bus similar to MII for SFP with the hope that with more work it can grow into a larger, general FreeBSD framework and hooked it up to DPMAC.
 * With this, minimal support (still fairly hacked up) for "managed" SFP+ mode (using the Ten64 terminology) is usable on FDT-based systems using DAC and fiber cables.
 * Add more sysctl statistics to DPMAC and NI.
-In short, I mostly cleaned up some of the mess I contributed to during the initial bringup.
+In short, I mostly cleaned up some of the mess I contributed to during the initial bring-up.
 
 For the LS1088a based WHLE-LS1 systems changes include:
 * device-tree file updates.
