--- a/website/content/en/status/report-2024-01-2024-03/wireless.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/wireless.adoc
@@ -6,7 +6,7 @@ link:https://bugs.freebsd.org/bugzilla/showdependencytree.cgi?id=277512&hide_res
 Contact: Bjoern A. Zeeb <bz@FreeBSD.org> +
 Contact: The FreeBSD wireless mailing list <wireless@FreeBSD.org>
 
-In the first weeks of 2024 focus was on stability for 13.3-RELEASE to finally make man:iwlwifi[4] useable.
+In the first weeks of 2024 focus was on stability for 13.3-RELEASE to finally make man:iwlwifi[4] usable.
 The upcoming 14.1-RELEASE will benefit from this work too.
 The response has since generally been positive and man:iwlwifi[4] supporting chipsets up to BE200 seems mostly stable, yet still slow.
 
