handbook/wayland: Fix sysrc command
If you copied and pasted from the Handbook, this is what would have
happened:

  # sysrc seatd_enable=”YES”
  seatd_enable:  -> ”YES”
  rc.conf: seatd_enable="”YES”"

Reported by:	garga

--- a/documentation/content/en/books/handbook/wayland/_index.adoc
+++ b/documentation/content/en/books/handbook/wayland/_index.adoc
@@ -129,7 +129,7 @@ To enable and start the `seatd` daemon now, and on system initialization:
 
 [source,shell]
 ----
-# sysrc seatd_enable=”YES”
+# sysrc seatd_enable="YES"
 # service seatd start
 ----
 
