--- a/website/content/en/status/report-2024-01-2024-03/libsys.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/libsys.adoc
@@ -19,7 +19,7 @@ Since then I've made a number of refinements to the way we link libsys as well a
 
 Thanks to Konstantin Belousov <kib@FreeBSD.org> for many rounds of review and feedback as well as runtime linker fixes.
 Thanks to Mark Johnston <markj@FreeBSD.org> for runtime linker debugging and Dimitry Andric <dim@FreeBSD.org> for sanitizer fixes.  
-Thanks also to everyone how reported bugs and helped debug issues.
+Thanks also to everyone who reported bugs and helped debug issues.
 
 ==== Known issues (as of the end of the reporting period)
 
